force-app/main/default/objects/Asset/fields/Authorized_cancellation__c.field-meta.xml
<CustomField>
    <fullName>Authorized_cancellation__c</fullName>
    <defaultValue>true</defaultValue>
    <label>MD autorisée</label>
    <type>Checkbox</type>
</CustomField>