force-app/main/default/objects/Asset/fields/Authorized_formal_notice__c.field-meta.xml
<CustomField>
    <fullName>Authorized_formal_notice__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Radiation autorisée</label>
    <type>Checkbox</type>
</CustomField>