force-app/main/default/objects/Asset/fields/Email_Compte_formule__c.field-meta.xml
<CustomField>
    <fullName>Email_Compte_formule__c</fullName>
    <formula>Account.PersonEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Compte formule</label>
    <type>Text</type>
</CustomField>