force-app/main/default/objects/Asset/fields/Formule__c.field-meta.xml
<CustomField>
    <fullName>Formule__c</fullName>
    <label>Formule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>particuliere</fullName>
            </value>
            <value>
                <fullName>Generale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>