force-app/main/default/objects/Asset/fields/Initial_Total_Premium_for_Term__c.field-meta.xml
<CustomField>
    <fullName>Initial_Total_Premium_for_Term__c</fullName>
    <label>Initial Total Premium for Term</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>