force-app/main/default/objects/Asset/fields/isAyantDroit__c.field-meta.xml
<CustomField>
    <fullName>isAyantDroit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isAyantDroit</label>
    <type>Checkbox</type>
</CustomField>