force-app/main/default/objects/Asset/fields/Mise_en_demeure__c.field-meta.xml
<CustomField>
    <fullName>Mise_en_demeure__c</fullName>
    <formula>&quot;True&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mise en demeure</label>
    <type>Text</type>
</CustomField>