force-app/main/default/objects/Asset/fields/newBeneficiare__c.field-meta.xml
<CustomField>
    <fullName>newBeneficiare__c</fullName>
    <defaultValue>false</defaultValue>
    <label>newBeneficiare</label>
    <type>Checkbox</type>
</CustomField>