force-app/main/default/objects/Asset/fields/Relaunch_authorized__c.field-meta.xml
<CustomField>
    <fullName>Relaunch_authorized__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Relance autorisée</label>
    <type>Checkbox</type>
</CustomField>