force-app/main/default/objects/Asset/fields/TECH_EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>TECH_EffectiveDate__c</fullName>
    <formula>DATE(YEAR(vlocity_ins__EffectiveDate__c)+1,1,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_EffectiveDate</label>
    <type>Date</type>
</CustomField>