force-app/main/default/objects/Asset/fields/Tech_ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>Tech_ExpirationDate__c</fullName>
    <formula>DATE(YEAR(vlocity_ins__EffectiveDate__c)+1,12,31)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tech_ExpirationDate</label>
    <type>Date</type>
</CustomField>