force-app/main/default/objects/Asset/fields/Tech_OldPolicyId__c.field-meta.xml
<CustomField>
    <fullName>Tech_OldPolicyId__c</fullName>
    <label>Tech_OldPolicyId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>