force-app/main/default/objects/Asset/fields/Tech_TotalAmount_c__c.field-meta.xml
<CustomField>
    <fullName>Tech_TotalAmount_c__c</fullName>
    <label>Tech_TotalAmount__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>