force-app/main/default/objects/Asset/fields/Trop_Moins_Percu__c.field-meta.xml
<CustomField>
    <fullName>Trop_Moins_Percu__c</fullName>
    <inlineHelpText>Trop perçu est négatif / Moins perçu est positif</inlineHelpText>
    <label>Trop Perçu/ Moins Perçu</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>