force-app/main/default/objects/Asset/fields/WebSiteId__c.field-meta.xml
<CustomField>
    <fullName>WebSiteId__c</fullName>
    <label>WebSiteId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>